add new features

--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="colorBrand">#77dd55</color>
+    <color name="colorBrandDark1">#338822</color>
 </resources>
