--- a/MeWSync/app/src/main/res/layout/device_disovery_fragment_item_list.xml
+++ b/MeWSync/app/src/main/res/layout/device_disovery_fragment_item_list.xml
@@ -1,46 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical" android:gravity="center" android:padding="8dp"
-              android:background="@drawable/list_item_bg">
-
-    <androidx.recyclerview.widget.RecyclerView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/list"
-            android:name="com.mewhpm.mewsync.fragments.DeviceDiscoveryFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:layout_weight="1"
-            app:layoutManager="LinearLayoutManager"
-            tools:context=".fragments.DeviceDiscoveryFragment"
-            tools:listitem="@layout/device_disovery_fragment_item"/>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center"
-            android:padding="8px" android:id="@+id/searchBar">
-        <ImageView
-                android:src="@android:color/black"
-                android:layout_width="64dp"
-                android:layout_height="64dp" android:id="@+id/waitIcon1" android:layout_weight="2"/>
-        <TextView
-                android:text="Searching..."
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical" android:gravity="center" android:padding="8dp"
+                  android:background="@drawable/list_item_bg">
+        <androidx.recyclerview.widget.RecyclerView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/list"
+                android:name="com.mewhpm.mewsync.fragments.DeviceDiscoveryFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="5"
-                android:textStyle="bold" android:textSize="18sp" android:paddingLeft="8dp"/>
-        <TextView
-                android:text="Stop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/backLink" android:layout_weight="0"
-                android:paddingLeft="8dp" android:paddingRight="8dp"
-                android:textColor="@color/design_default_color_primary_dark" android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:layout_height="match_parent"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_weight="1"
+                app:layoutManager="LinearLayoutManager"
+                tools:context=".fragments.DeviceDiscoveryFragment"
+                tools:listitem="@layout/device_disovery_fragment_item"/>
     </LinearLayout>
-
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:ico_icon="gmd-plus-circle"
+            app:backgroundTint="@color/colorBrandDark1"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
