--- a/MeWSync/app/src/main/res/layout/mew_disovery_fragment_popup.xml
+++ b/MeWSync/app/src/main/res/layout/mew_disovery_fragment_popup.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/discoveryList"
-    android:name="com.mewhpm.mewsync.fragments.DeviceDiscoveryFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="0dp"
-    android:layout_marginRight="0dp"
-    tools:context=".fragments.DeviceDiscoveryFragment"
-    tools:listitem="@layout/device_disovery_fragment_item"/>
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="32dp"
+        android:orientation="vertical"
+        android:minWidth="9999dp"
+        android:minHeight="9999dp">
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_weight="1"
+            android:id="@+id/discoveryList"
+            android:name="com.mewhpm.mewsync.fragments.DeviceDiscoveryFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".fragments.DeviceDiscoveryFragment"
+            tools:listitem="@layout/device_disovery_fragment_item">
+    </androidx.recyclerview.widget.RecyclerView>
+    <Button
+            android:text="Stop scanning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:id="@+id/button" android:textSize="18sp" android:textStyle="bold"
+            android:textColor="@color/colorWhite" android:background="@color/colorBrandDark1"
+            android:layout_margin="4dp" android:gravity="center" android:paddingLeft="12dp"
+            android:paddingRight="16dp"/>
+</LinearLayout>
