--- a/MeWSync/app/src/main/res/layout/pincode_fragment.xml
+++ b/MeWSync/app/src/main/res/layout/pincode_fragment.xml
@@ -8,16 +8,21 @@
             android:text="Enter PIN-code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginTop="8dp"
-            android:layout_marginLeft="12dp" android:layout_marginRight="12dp"/>
+            android:layout_marginLeft="12dp" android:layout_marginRight="12dp" android:textSize="18sp"/>
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberPassword"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/pincodeBox1"
             android:textStyle="bold" android:textSize="36sp"
-            android:gravity="center" android:text="1234" android:editable="false" android:layout_margin="8dp"
+            android:gravity="center" android:editable="false" android:layout_margin="8dp"
             android:textIsSelectable="false" android:singleLine="true"/>
+    <TextView
+            android:text="Incorrect PIN-code. Please, try again."
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/incorrectPinWarning" android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp" android:textStyle="bold" android:textColor="@color/colorAccent"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
