--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#77dd55</color>
+    <color name="colorPrimaryDark">#338822</color>
+    <color name="colorAccent">#d81b60</color>
 
     <color name="colorBrand">#77dd55</color>
     <color name="colorBrandDark1">#338822</color>
