--- a/MeWSync/app/src/main/res/layout/pincode_fragment.xml
+++ b/MeWSync/app/src/main/res/layout/pincode_fragment.xml
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <Button
-                android:text="DEL"
+                android:text="CLEAR"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button41" android:layout_weight="1"
