--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBrand">#77dd55</color>
     <color name="colorBrandDark1">#338822</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="lightGray1">#BDBDBD</color>
 </resources>
