--- a/MeWSync/app/src/main/res/layout/pincode_fragment.xml
+++ b/MeWSync/app/src/main/res/layout/pincode_fragment.xml
@@ -12,12 +12,12 @@
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword"
+            android:inputType="text"
             android:ems="10"
             android:id="@+id/pincodeBox1"
             android:textStyle="bold" android:textSize="36sp"
-            android:gravity="center" android:editable="false" android:layout_margin="8dp"
-            android:textIsSelectable="false" android:singleLine="true"/>
+            android:gravity="center" android:layout_margin="8dp"
+            android:textIsSelectable="false" android:singleLine="true" android:enabled="false"/>
     <TextView
             android:text="Incorrect PIN-code. Please, try again."
             android:layout_width="match_parent"
@@ -33,21 +33,21 @@
                 android:layout_height="wrap_content" android:id="@+id/button11" android:layout_weight="1"
                 android:layout_margin="2dp" android:textStyle="bold" android:textSize="24sp"
                 android:background="@color/colorBrandDark1" android:textColor="@color/colorWhite"
-                android:padding="8dp"/>
+                android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="2"
                 android:layout_width="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_height="wrap_content" android:id="@+id/button12" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="3"
                 android:layout_width="wrap_content"
                 android:layout_margin="2dp"
                 android:layout_height="wrap_content" android:id="@+id/button13" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
@@ -61,21 +61,21 @@
                 android:id="@+id/button21"
                 android:layout_weight="1" android:textStyle="bold" android:textSize="24sp"
                 android:background="@color/colorBrandDark1" android:textColor="@color/colorWhite"
-                android:padding="8dp"/>
+                android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="5"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button22" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="6"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button23" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
@@ -87,21 +87,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button31" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="8"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button32" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="9"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button33" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
     </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
@@ -113,20 +113,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button41" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="0"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button42" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
         <Button
                 android:text="OK"
                 android:layout_margin="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/button43" android:layout_weight="1"
                 android:textStyle="bold" android:textSize="24sp" android:background="@color/colorBrandDark1"
-                android:textColor="@color/colorWhite" android:padding="8dp"/>
+                android:textColor="@color/colorWhite" android:padding="8dp" android:enabled="true"/>
     </LinearLayout>
 </LinearLayout>
