--- a/MeWSync/app/src/main/res/menu/bottom_nav_block.xml
+++ b/MeWSync/app/src/main/res/menu/bottom_nav_block.xml
@@ -1,6 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/mDevices" android:title="Devices" />
-    <item android:id="@+id/mPasswords" android:title="Passwords" />
-    <item android:id="@+id/mSettings" android:title="Settings" />
-</menu>
+<menu />
