--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorBrandDark2">#334433</color>
     <color name="colorBrandBlack">#000000</color>
     <color name="colorBrandDefaultElement">#DD6600</color>
+    <color name="colorBrandYellow">#FFFF77</color>
 
     <color name="colorWhite">#ffffff</color>
     <color name="lightGray1">#BDBDBD</color>
