--- a/MeWSync/app/src/main/res/layout/x02_activity_device.xml
+++ b/MeWSync/app/src/main/res/layout/x02_activity_device.xml
@@ -57,6 +57,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            app:itemBackground="@drawable/nav_view_selected_item_bg_drawable"
+            app:itemTextColor="@color/drawer_menuitem_text"
+            app:itemIconTint="@color/drawer_menuitem_text"
             android:id="@+id/navView1"
             app:menu="@menu/device_navigation_view"
             app:headerLayout="@layout/x02_nav_view_header"
