--- a/MeWSync/app/src/main/res/menu/device_navigation_view.xml
+++ b/MeWSync/app/src/main/res/menu/device_navigation_view.xml
@@ -4,9 +4,18 @@
       tools:context="com.mewhpm.mewsync.DeviceActivity">
 
     <item android:id="@+id/menuItemPasswords"
-          app:iiv_color="@color/colorBrandDark1"
-          app:iiv_icon="gmd-plus-circle"
-          app:iiv_size="28dp"
+          app:ico_color="@color/colorBrandDark1"
+          app:ico_icon="gmd-vpn-key"
+          app:ico_size="28dp"
+          android:checkable="true"
           android:title="@string/passwords"
           android:orderInCategory="100"/>
+
+    <item android:id="@+id/menuSync"
+          app:ico_color="@color/colorBrandDark1"
+          app:ico_icon="gmd-cloud-upload"
+          app:ico_size="28dp"
+          android:checkable="true"
+          android:title="@string/sync_with_device"
+          android:orderInCategory="999"/>
 </menu>
