--- a/MeWSync/app/src/main/res/values/colors.xml
+++ b/MeWSync/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorBrand">#77dd55</color>
     <color name="colorBrandDark1">#338822</color>
     <color name="colorBrandDark2">#334433</color>
+    <color name="colorBrandDark3">#116600</color>
     <color name="colorBrandBlack">#000000</color>
     <color name="colorBrandDefaultElement">#DD6600</color>
     <color name="colorBrandYellow">#FFFF77</color>
