--- a/MeWSync/app/src/main/res/views/activities/layout/x02_activity_device.xml
+++ b/MeWSync/app/src/main/res/views/activities/layout/x02_activity_device.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <LinearLayout
+        <!--LinearLayout
                 android:orientation="horizontal"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
@@ -21,7 +21,6 @@
                 android:paddingStart="8dp" android:paddingEnd="8dp">
             <ImageButton
                     android:layout_weight="0"
-                    android:src="@mipmap/ic_launcher"
                     android:background="@null"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -40,16 +39,15 @@
                     android:textColor="@color/colorWhite"/>
             <ImageButton
                     android:layout_weight="0"
-                    android:src="@mipmap/ic_launcher"
                     android:background="@null"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:id="@+id/fragmentMenuButton"/>
-        </LinearLayout>
+        </LinearLayout-->
         <FrameLayout
                 android:layout_weight="99"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:id="@+id/fragment_holder">
+                android:layout_height="match_parent" android:id="@+id/fragment_holder_dev_1">
 
         </FrameLayout>
     </LinearLayout>
@@ -58,8 +56,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:itemBackground="@drawable/nav_view_selected_item_bg_drawable"
-            app:itemTextColor="@color/drawer_menuitem_text"
-            app:itemIconTint="@color/drawer_menuitem_text"
+            app:itemTextColor="@color/nav_view_menuitem_text"
+            app:itemIconTint="@color/nav_view_menuitem_text"
             android:id="@+id/navView1"
             app:menu="@menu/device_navigation_view"
             app:headerLayout="@layout/x02_nav_view_header"
