--- a/MeWSync/app/src/main/res/views/listelements/layout/x01_recyclerview_pair_element.xml
+++ b/MeWSync/app/src/main/res/views/listelements/layout/x01_recyclerview_pair_element.xml
@@ -5,7 +5,7 @@
               android:orientation="horizontal"
               android:gravity="center"
               android:padding="8dp"
-              android:background="@drawable/list_item_bg">
+              android:background="@drawable/rec_view_list_item_bg">
 
     <ImageView
             android:layout_width="64dp"
